--- a/datn/app/views/layouts/application.html.erb
+++ b/datn/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 <!--[if (gt IE 9)|!(IE)]><!-->
 <html class="no-js" lang="vi">
 	<head>
+    <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 		<%= favicon_link_tag(source='logo_edu.png', options={}) %>
@@ -24,31 +25,33 @@
 	        <!-- Favicon
 	  ============================================ -->
 	  <!-- Datatable -->
-	  <link rel="stylesheet" href="assets/public/css/jquery.dataTables.min.css">
+	  <link rel="stylesheet" href="http://localhost:3000/assets/public/css/jquery.dataTables.min.css">
 
 	  <!-- style CSS
 	  ============================================ -->          
-	  <link rel="stylesheet" href="assets/public/css/agency.min.css">
-	  <link rel="stylesheet" href="assets/public/css/style.css">
+	  <link rel="stylesheet" href="http://localhost:3000/assets/public/css/agency.min.css">
+    <link rel="stylesheet" href="http://localhost:3000/assets/public/css/style.css">
+	  <link rel="stylesheet" href="http://localhost:3000/assets/public/css/rateit.css">
 
 	  <!-- JS -->    
-	  <script src="assets/public/js/jquerys.js"></script>
+	  <script src="http://localhost:3000/assets/public/js/jquerys.js"></script>
 
 	  <!-- jquery-1.11.3.min js
 	  ============================================ -->         
-	  <!-- <script src="assets/public/js/vendor/jquery-1.11.3.min.js"></script>    -->
-	  <script src="assets/public/js/jquery-1.11.2.min.js"></script>   
-	  <script src="assets/public/js/validate.js"></script>
-	  <script src="assets/public/js/jquery.validate.js"></script>
+	  <!-- <script src="http://localhost:3000/assets/public/js/vendor/jquery-1.11.3.min.js"></script>    -->
+    <script src="http://localhost:3000/assets/public/js/jquery-1.11.2.min.js"></script>   
+	  <script src="http://localhost:3000/assets/public/js/jquery.rateit.js"></script>   
+	  <script src="http://localhost:3000/assets/public/js/validate.js"></script>
+	  <script src="http://localhost:3000/assets/public/js/jquery.validate.js"></script>
 
 	  <!-- bootstrap js
 	  ============================================ -->         
-	  <script src="assets/public/js/bootstrap.min.js"></script>      
+	  <script src="http://localhost:3000/assets/public/js/bootstrap.min.js"></script>      
 
 	  <!-- Datatable -->
-	  <script src="assets/public/js/jquery.dataTables.min.js"></script>
+	  <script src="http://localhost:3000/assets/public/js/jquery.dataTables.min.js"></script>
 	  
-	  <script src="assets/public/js/vendor/modernizr-2.8.3.min.js"></script>
+	  <script src="http://localhost:3000/assets/public/js/vendor/modernizr-2.8.3.min.js"></script>
   </head>
   <body>
       <!--Start nav  area --> 
@@ -57,7 +60,7 @@
         <div class="row">
           <!--logo area-->
           <div class="col-md-3 col-sm-3 col-xs-4">
-              <div class="logo"><a href="/"><img src="/assets/logo_edu.png" alt=""></a></div>
+              <div class="logo"><a href="/"><img src="http://localhost:3000/assets/logo_edu.png" alt=""></a></div>
           </div>
           <!--end logo area-->
           <!--nav area-->
@@ -80,7 +83,7 @@
     	</div>
   	</div>
     <!--end header  area -->
-  	<%= yield %>
+    <%= yield %>
     <div class="footer_area" id="contact-me">
       <div class="container">
         <div class="row">
@@ -191,33 +194,33 @@
         <p>Copyright © 2017 <a href="https://www.facebook.com/vinaenter.edu">AM THUC DA THANH</a>.</p>
       </div>
     </div>
-    <script src="assets/public/js/owl.carousel.min.js"></script>
+    <script src="http://localhost:3000/assets/public/js/owl.carousel.min.js"></script>
 
     <!-- plugins js
     ============================================ -->      
 
-    <script src="assets/public/js/plugins.js"></script>   
+    <script src="http://localhost:3000/assets/public/js/plugins.js"></script>   
     <!-- counterup js
     ============================================ -->        
-    <script src="assets/public/js/jquery.counterup.min.js"></script>
-    <script src="assets/public/js/waypoints.min.js"></script>
+    <script src="http://localhost:3000/assets/public/js/jquery.counterup.min.js"></script>
+    <script src="http://localhost:3000/assets/public/js/waypoints.min.js"></script>
     <!-- MixItUp js-->        
-    <script src="assets/public/js/jquery.mixitup.js"></script>
+    <script src="http://localhost:3000/assets/public/js/jquery.mixitup.js"></script>
     <!-- Nivo Slider JS -->
-    <script src="assets/public/js/jquery.nivo.slider.pack.js"></script>       
-    <script src="assets/public/js/jquery.nav.js"></script>           
+    <script src="http://localhost:3000/assets/public/js/jquery.nivo.slider.pack.js"></script>       
+    <script src="http://localhost:3000/assets/public/js/jquery.nav.js"></script>           
     <!-- wow js
     ============================================ -->       
-    <script src="assets/public/js/wow.js"></script>
+    <script src="http://localhost:3000/assets/public/js/wow.js"></script>
     <!--Activating WOW Animation only for modern browser-->
     <!--[if !IE]><!-->
     <script type="text/javascript"> new WOW().init(); </script>
     <!--<![endif]-->
     <!-- Add venobox ja -->
-    <script type="text/javascript" src="assets/public/venobox/venobox.min.js"></script>       
+    <script type="text/javascript" src="http://localhost:3000/assets/public/venobox/venobox.min.js"></script>       
     <!-- main js
     ============================================ -->           
-    <script src="assets/public/js/main.js"></script>
-    <script src="assets/public/js/jqBootstrapValidation.js"></script>
+    <script src="http://localhost:3000/assets/public/js/main.js"></script>
+    <script src="http://localhost:3000/assets/public/js/jqBootstrapValidation.js"></script>
   </body>
 </html>
