--- a/datn/app/views/users/edit.html.erb
+++ b/datn/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-  <div style="width: 80%;padding: 50px;margin-top: 200px;    margin-left: 200px;"class="">
+  <div style="width: 80%;padding: 50px;margin-top: 200px;    margin-left: 200px;">
     <h3 style="margin-left: -17px;color: #b99ddd;float: left;">Thông tin cá nhân</h3>
     <div style="float: left; margin-top: 45px; margin-left: -240px;">
 
