--- a/datn/app/views/restaurants/index.html.erb
+++ b/datn/app/views/restaurants/index.html.erb
@@ -7,7 +7,8 @@
 </div>
 <!-- HOME SLIDER -->
 
-<div class="search" style="margin-top: 50px;">
+<div id="searchs" class="search" style="margin-top: 50px;">
+<%= form_tag searches_path, method: :get do %>
 	<form action="index_submit" method="get" accept-charset="utf-8">
 		<div class="row" style="padding-left: 110px;">
 			<div class="col-sm-2">
@@ -15,7 +16,7 @@
 					<label for="">Quận</label>
 				</div>
 				<div class="form-group">
-					<select name="distric" class="form-control">
+					<select name="district" class="form-control">
             <option value="">---</option>
             <option value="CamLe">Cẩm Lệ</option>
             <option value="HaiChau">Hải Châu</option>
@@ -52,7 +53,6 @@
           <option value="MienTrung">Miền Trung</option>
           <option value="ChauAu">Châu Âu</option>
           <option value="ChauA">Châu Á</option>
-          <option value="ChauMy">Châu Mỹ</option>
         </select>
       </div>
     </div>
@@ -63,11 +63,9 @@
      <div class="form-group">
        <select name="size" class="form-control">
         <option value="">---</option>
-        <option value="1-3">1-3 Người</option>
-        <option value="4-6">4-6 Người</option>
-        <option value="7-10">7-10 Người</option>
-        <option value="10-20">10-20 Người</option>
-        <option value="20">>20 Người</option>
+        <option value="Lon">Lớn</option>
+        <option value="Vua">Vửa</option>
+        <option value="Nho">Nhỏ</option>
       </select>
     </div>
   </div>
@@ -92,14 +90,14 @@
  </button>
 </div>
 </div>
-</form>
+<% end %>
 </div>
 
 <section id="recommended">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 text-center">
-				<h3 class="section-heading">Gợi ý cho bạn</h3>
+				<h3 class="section-heading" style="margin-top: 50px;">Gợi ý cho bạn</h3>
 			</div>
 		</div>
 		<div class="row">
@@ -112,7 +110,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">Địa điểm ẩm thực</h2>
+        <h2 class="section-heading" style="margin-top: 50px;">Địa điểm ẩm thực</h2>
       </div>
     </div>
     <div class="row">
@@ -128,7 +126,9 @@
         <%= render partial: 'rest', collection: @restaurants %>
       </div>
     </div>
-    <%= will_paginate @restaurants %>
+    <h5 style="text-align: center;">
+      <%= will_paginate @restaurants %>
+    </h5>
   </div>
 </div>
 <!--end portfolio area -->
